--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,9 @@ dependencies:
   path_provider: 1.6.28
   firebase_messaging: ^7.0.3
   shared_preferences: ^0.5.12+4
+  upgrader: ^2.8.2
+  flutter_downloader: ^1.5.2
+  workmanager: ^0.2.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
@@ -78,6 +81,7 @@ flutter:
     - lang/en.json
     - lang/gu.json
     - lang/hi.json
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
