--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,8 +11,8 @@
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="gpgroup"
-        android:icon="@mipmap/ic_launcher">
+        android:label="VrajRaj Broker"
+        android:icon="@mipmap/launcher_icon">
 
         <provider
             android:name="vn.hunghd.flutterdownloader.DownloadedFileProvider"
