--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,9 @@ dependencies:
   workmanager: ^0.2.3
   connectivity: ^2.0.2
   flutter_launcher_icons: ^0.8.1
+  cached_network_image: ^2.5.0
+  awesome_dialog: ^1.3.2
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
