--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,52 +18,52 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  firebase_auth: ^0.18.3
-  cloud_firestore: ^0.14.3
-  provider: ^4.3.2+2
-  fluttertoast: ^7.1.6
-  speech_to_text: ^3.0.1
-  avatar_glow: ^1.2.0
-  font_awesome_flutter: ^8.10.0
-  google_sign_in: ^4.5.6
-  responsive_framework: ^0.0.14
-  zoom_widget: ^0.1.3
-  timeline_tile: ^1.0.0
-  intl: ^0.16.1
-  screenshot: ^0.2.0
+  firebase_auth: ^1.3.0
+  cloud_firestore: ^2.2.1
+  provider: ^5.0.0
+  fluttertoast: ^8.0.7
+  speech_to_text: ^4.2.1
+  avatar_glow: ^2.0.1
+  font_awesome_flutter: ^9.0.0
+  google_sign_in: ^5.0.4
+  responsive_framework: ^0.1.1
+  pinch_zoom: ^0.1.0
+  timeline_tile: ^2.0.0
+  intl: ^0.17.0
+  screenshot: ^0.3.0
   social_share: ^2.0.5
-  image_picker: ^0.6.7+14
-  permission_handler: ^5.0.1+1
-  firebase_storage: ^5.1.0
-  carousel_slider: ^2.3.1
-  rxdart: ^0.25.0
-  auto_size_text: ^2.1.0
-  flutter_speed_dial: ^2.1.1
+  image_picker: ^0.8.0+3
+  permission_handler: ^8.0.1
+  firebase_storage: ^8.1.1
+  carousel_slider: ^4.0.0-nullsafety.0
+  rxdart: ^0.27.1
+  auto_size_text: ^3.0.0-nullsafety.0
+  flutter_speed_dial: ^3.0.5
   flutter_datetime_picker: ^1.5.0
-  url_launcher: 5.7.10
-  flutter_image_compress: ^0.7.0
-  image: ^2.1.18
-  path_provider: 1.6.28
-  firebase_messaging: ^7.0.3
-  shared_preferences: ^0.5.12+4
-  upgrader: ^2.8.2
+  url_launcher: ^6.0.6
+  flutter_image_compress: ^1.0.0
+  image: ^3.0.2
+  path_provider: ^2.0.2
+  firebase_messaging: ^10.0.1
+  shared_preferences: ^2.0.6
+  upgrader: ^3.3.0
   flutter_downloader: ^1.5.2
-  workmanager: ^0.2.3
-  connectivity: ^2.0.2
-  flutter_launcher_icons: ^0.8.1
-  cached_network_image: ^2.5.0
-  awesome_dialog: ^1.3.2
+  workmanager: ^0.4.1
+  connectivity: ^3.0.6
+  flutter_launcher_icons: ^0.9.0
+  cached_network_image: ^3.0.0
+  awesome_dialog: ^2.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
+  cupertino_icons: ^1.0.3
 
 dev_dependencies:
   flutter_test:
